--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
 		"stylelint-config-standard": "^22.0.0",
 		"stylelint-scss": "^3.20.1",
 		"stylelint-webpack-plugin": "^3.0.1",
-		"ts-jest": "^27.0.5"
+		"ts-jest": "^27.0.5",
+		"yaml": "^2.1.1"
 	},
 	"browserslist": [
 		"last 10 Chrome versions",
