FIX: changes to tests so they run under mysql and hopefully in postgres

--- a/conf/webwork3-test.dist.yml
+++ b/conf/webwork3-test.dist.yml
@@ -21,3 +21,10 @@ database_dsn: dbi:SQLite:./t/db/sample_db.sqlite
 # These are ignored if the 'sqlite' database is used.
 database_user: webworkWrite
 database_password: password
+
+# Cookie control settings
+# cookie_samesite: None
+# disable this for testing.
+cookie_secure: 0
+cookie_lifetime: 3600
+
