FIX: more changes to get both sqlite and mysql backends to pass tests.

--- a/conf/webwork3-test.dist.yml
+++ b/conf/webwork3-test.dist.yml
@@ -11,9 +11,9 @@ webwork3_home: .
 # database that is different than others.
 
 # For the sqlite database
-database_dsn: dbi:SQLite:./t/db/sample_db.sqlite
+# database_dsn: dbi:SQLite:./t/db/sample_db.sqlite
 # For mysql or mariadb
-#database_dsn: dbi:mysql:dbname=webwork3_test
+database_dsn: dbi:mysql:dbname=webwork3_test
 # For postgres
 #database_dsn: dbi:Pg:dbname=webwork3_test;host=localhost
 
