Redo roles and permissions (#95)
Peter Staab:
This pull request does a number of things with roles and permissions: 
- all roles and permissions are defined in `permissions.dist.yml`
- admins can copy this file over and change permissions/add roles, etc. 
- there is a role called `course_admin`, which can have additional permissions that instructors don't have. 
- there are both server-side permissions and ui permissions.
- there is a script `bin/update_perms.pl` which loads both the roles and permissions in the `permissions.yml` file into the database.
- on the server side, the permissions are checked by querying the database. 
- on the UI side, after login, the permissions are loaded in the store to be able to be queried whenever. 
- every route is now checked that the user has permission to visit that route.

Glenn Rice:
Make a Boolean InflateColumn package that works for the boolean data type.

K. Andrew Parker:
Track authentication expiry in session store.

Co-authored-by: K. Andrew Parker <kparker@citytech.cuny.edu>
Co-authored-by: Glenn Rice <grice1@missouriwestern.edu>

--- a/conf/webwork3-test.dist.yml
+++ b/conf/webwork3-test.dist.yml
@@ -13,7 +13,7 @@ webwork3_home: .
 # For the sqlite database
 database_dsn: dbi:SQLite:./t/db/sample_db.sqlite
 # For mysql or mariadb
-#database_dsn: dbi:mysql:dbname=webwork3_test
+# database_dsn: dbi:mysql:dbname=webwork3_test
 # For postgres
 #database_dsn: dbi:Pg:dbname=webwork3_test;host=localhost
 
@@ -21,3 +21,10 @@ database_dsn: dbi:SQLite:./t/db/sample_db.sqlite
 # These are ignored if the 'sqlite' database is used.
 database_user: webworkWrite
 database_password: password
+
+# Cookie control settings
+# cookie_samesite: None
+# disable this for testing.
+cookie_secure: 0
+cookie_lifetime: 3600
+
