WIP: allow default settings to be defined in an override file.
WIP: allow default settings to be defined in an override file.

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ conf/webwork3*.yml
 conf/apache2/webwork3-apache2.conf
 conf/apache2/webwork3.service
 conf/apache2/renderer.service
+conf/course_settings.yml
 
 # Devel::Cover
 cover_db/
