WIP: add user-set tests to mojolicious
WIP: add user-set tests to mojolicious routes


WIP: add user-set tests to mojolicious routes


WIP: updated user_sets tests to check for permissions

FIX: update the way the set_version param is fetched to avoid error.

WIP: new set_version mojolicious test.

WIP: new set_version mojolicious test.


WIP: deleting from db--update store tests

WIP: cleanup the tests

WIP: deleting from db--update store tests
WIP: send message from mojolicious layer and more cleanup.
FIX: update the pinia store tests.

WIP: add user-set tests to mojolicious

--- a/conf/permissions.dist.yml
+++ b/conf/permissions.dist.yml
@@ -105,9 +105,10 @@ db_permissions:
     getUserSet:
       allow_self_access: true
       allowed_roles: ['course_admin', 'instructor']
-    getUserSet:
       allow_self_access: true
+    getUserSet:
       allowed_roles: ['course_admin', 'instructor']
+      allow_self_access: true
     addUserSet:
       allowed_roles: ['course_admin', 'instructor']
     updateUserSet:
