--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"core-js": "^3.6.5",
 		"jquery": "^3.6.0",
 		"jsdoc": "^3.6.7",
+		"loglevel": "^1.8.0",
 		"mathjax": "^3.2.0",
 		"node-polyfill-webpack-plugin": "^1.1.4",
 		"papaparse": "^5.3.1",
@@ -28,8 +29,7 @@
 		"quasar": "^2.3.1",
 		"setimmediate": "^1.0.5",
 		"vue-draggable-next": "^2.1.1",
-		"vue-i18n": "^9.1.7",
-		"winston": "^3.3.3"
+		"vue-i18n": "^9.1.7"
 	},
 	"devDependencies": {
 		"@babel/eslint-parser": "^7.13.14",
