--- a/conf/permissions.dist.yml
+++ b/conf/permissions.dist.yml
@@ -102,6 +102,9 @@ db_permissions:
     getUserSets:
       allow_self_access: true
       allowed_roles: ['course_admin', 'instructor']
+    getUserSet:
+      allow_self_access: true
+      allowed_roles: ['course_admin', 'instructor']
     addUserSet:
       allowed_roles: ['course_admin', 'instructor']
     updateUserSet:
