--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -57,8 +57,10 @@ jobs:
             libmojolicious-plugin-authentication-perl \
             libnet-ssleay-perl \
             libsql-translator-perl \
-            libtest-exception-perl \
+            libsub-info-perl \
+            libterm-table-perl \
             libtest-harness-perl \
+            libtest2-suite-perl \
             libtext-csv-perl \
             libtry-tiny-perl \
             libyaml-libyaml-perl
@@ -66,6 +68,7 @@ jobs:
             DBIx::Class::DynamicSubclass \
             Mojolicious::Plugin::DBIC \
             Mojolicious::Plugin::NotYAMLConfig \
+            Test2::MojoX \
             Devel::Cover::Report::Codecov
 
       - name: Run perl unit tests
