Massive overhaul of the units tests.
The unit tests no longer use the conf/webwork3-test.dist.yml or
conf/webwork3-test.yml configuration files.  Instead the configuration
is hardcoded into the unit test runners defined in t/lib/DBSubtest.pm
and bin/dev_scripts/test_pinia_stores.pl.  The point is that unit tests
should not depend on some modifiable configuration.  The
conf/webwork3-test.dist.yml file has been deleted.  You can copy
conf/webwork3.dist.yml to conf/webwork3-dev.yml for development use.
For morbo or the `bin/dev_scripts/build_sample_db.pl` script (previously
`t/db/build_db.pl`) the file conf/webwork3-dev.yml will be used if it
exists.

The sample data for the database is now in JSON files instead of CSV
files.  This allows for structured data with valid types.  This means
that all of the crap that was done to convert the data from the CSV
files into structured data with valid types is not needed.  In perl
decode_json does what is needed, and in javascript the JSON files can
just be imported and typescript correctly infers the types.  Note that
eventually it would be nice to do what is done in t/db/001_courses.t for
more of the tests.  That test no longer uses the sample data in the files
at all.  Most of the tests really don't use much from the sample data.
Furthermore, the tests can made much more precise and transparent in
this way.

The unit tests each deploy a temporary database instance, and load the
sample data automatically.  In addition, the tests can be run with all
three supported databases (sqlite, postgres, and mysql).  By default the
tests are only run with an in memory sqlite instance.  For all of the
tests if the environment variable WW3_TEST_ALL_DBS is set then the tests
will instead each be run three times.  Once with each of the supported
databases.  For postgres the Test::PostgreSQL package is used to create
a temporary postgres instance.  For mysql a local modified version of
the Test::mysqld package (t/lib/TestMysqld.pm) is used.  T

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"scripts": {
 		"lint": "eslint --ext .js,.ts,.vue . --fix && stylelint \"./src/**/*.vue\" \"./src/**/*.scss\" --fix",
 		"test": "jest --testPathPattern='tests/unit-tests'",
-		"test-stores": "./bin/dev_scripts/test_pinia_stores",
+		"test-stores": "./bin/dev_scripts/test_pinia_stores.pl",
 		"serve": "morbo bin/webwork3 & quasar dev",
 		"build": "quasar build",
 		"perltidy": "bash perltidy --pro=./.perltidyrc -b -bext='/' ./**/*.{t,pl,pm}"
