--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -3,7 +3,6 @@ name: Unit Tests and Coverage
 
 on:
   push:
-    branches: [main]
   pull_request:
     branches: [main]
 
@@ -39,6 +38,7 @@ jobs:
             libdata-dump-perl \
             libdatetime-format-strptime-perl \
             libdbd-sqlite3-perl \
+            libdbd-mysql-perl \
             libdbix-class-inflatecolumn-serializer-perl \
             libdbix-class-perl \
             libdbix-dbschema-perl \
@@ -61,9 +61,13 @@ jobs:
             libterm-table-perl \
             libtest-harness-perl \
             libtest2-suite-perl \
+            libtest-postgresql-perl \
             libtext-csv-perl \
             libtry-tiny-perl \
-            libyaml-libyaml-perl
+            libyaml-libyaml-perl \
+            mariadb-client \
+            mariadb-server \
+            postgresql
           cpanm --sudo --notest \
             DBIx::Class::DynamicSubclass \
             Mojolicious::Plugin::DBIC \
@@ -74,9 +78,8 @@ jobs:
       - name: Run perl unit tests
         env:
           HARNESS_PERL_SWITCHES: -MDevel::Cover
-        run: |
-          perl t/db/build_db.pl
-          prove -r t
+          WW3_TEST_ALL_DBS: 1
+        run: prove -r t
 
       - name: Push coverage analysis
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
@@ -93,5 +96,10 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
-      - name: Run typescript (client-side) tests
+      - name: Run jest client-side tests
         run: npm run test
+
+      - name: Run jest pinia stores tests.
+        env:
+          WW3_TEST_ALL_DBS: 1
+        run: bin/dev_scripts/test_pinia_stores.pl
