--- a/conf/webwork3.dist.yml
+++ b/conf/webwork3.dist.yml
@@ -1,12 +1,11 @@
 ---
 secrets:
   - 3cdf63327fcf77deaed1d200df4b9fee66af2326
-webwork3_home: .
 
 # Database settings
 
 # For the sqlite database
-database_dsn: dbi:SQLite:./t/db/sample_db.sqlite
+database_dsn: dbi:SQLite:./sample_db.sqlite
 # For mysql or mariadb
 #database_dsn: dbi:mysql:dbname=webwork3
 # For postgres
